fix: replace all text for an inline tracker item by selecting and typing, enter with whitespace after, layout of bullets to left of tracker items

--- a/packages/runtime/src/plugins/TrackerPlugin/TrackerItem.css
+++ b/packages/runtime/src/plugins/TrackerPlugin/TrackerItem.css
@@ -6,6 +6,7 @@
   padding: 0;
   position: relative;
   vertical-align: middle;
+  max-width: calc(100% - 62px);
 }
 
 /* Custom checkbox styling */
